--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
     <link href="https://kit-pro.fontawesome.com/releases/v6.5.0/css/pro.min.css" rel="stylesheet">
-    <title></title>
+    <title>Gokul</title>
 </head>
 <body>
     <div class="top">
