--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
         <div class="title">
             <p><img class="arrowicon" src="https://www.svgrepo.com/show/470778/corner-down-right.svg" alt="">WORKS</p>
 
+<a href="https://gok24.github.io/myself/projects.html">
             <button class="saw"> see all works</button>
-
+</a>
         </div>
 
         <div class="featworks">
@@ -190,7 +191,9 @@
 
 
                 <div class="mow">
+<a href="https://gok24.github.io/myself/projects.html">
                     <button> more works <i class="fa-regular fa-angle-right"></i></button>
+</a>
                 </div>
 
             </div>
