--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="top">
         <div class="sidex">
-            <span> <a href="education.html">Education</a></span>
-            <span>Projects</span>
-            <span>Connect</span>
+            <span> <a href="https://gok24.github.io/myself/timeline.html">Education</a></span>
+            <span><a href="https://gok24.github.io/myself/projects.html">Projects</a></span>
+            <span><a href="mailto:gokshi22@gmail.com">Connect</a></span>
 
             <div class="toglr">
                 <div class="txt">
